Fix suite number in hackerspace address
content/terms.html had the correct suite number, but several other pages
did not.

--- a/content/contact.html
+++ b/content/contact.html
@@ -14,7 +14,7 @@ weight: 600
     <section class="section has-text-centered">
       <div class="content">
         <p>board@801labs.org</p>
-        <p>353 East 200 South Suite #B, Salt Lake City, UT 84111</p>
+        <p>353 East 200 South Suite #201, Salt Lake City, UT 84111</p>
         <a href="https://discord.gg/uSQdUPt">
           <span class="icon is-medium">
             <i class="fab fa-discord"></i>
